[project]
name = "pubsubbud"
version = "0.1.0"
description = ""
authors = [
    {name = "Thilo Bronnenmeyer"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "redis (>=5.2.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

