[project]
name = "pubsubbud"
version = "0.1.0"
description = ""
authors = [
    {name = "Thilo Bronnenmeyer"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "redis (>=5.2.1,<6.0.0)",
    "websockets (>=14.2,<15.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "isort (>=6.0.0,<7.0.0)",
    "paho-mqtt (>=2.1.0,<3.0.0)",
    "aiomqtt (>=2.3.0,<3.0.0)",
    "aiokafka (>=0.12.0,<0.13.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
mypy = "^1.14.1"
pre-commit = "^4.1.0"

[tool.mypy]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "aiokafka.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
